# cosmic-camera-controls

./: Cargo.toml  README.md  justfile
res/: io.github.ctsdownloads.CosmicCameraControls.desktop
resources/: app.desktop  metainfo.xml
src/: app.rs  camera.rs  config.rs  main.rs  preview.rs
